--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,7 @@
     "ws": "^8.11.0"
   },
   "scripts": {
-    "server": "nodemon src/server.js",
+    "server": "nodemon --experimental-json-modules src/server.js",
     "start":"nodemon src/index.js --ext js,graphql --exec babel-node" 
   },
   "devDependencies": {
