--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb://jeff:jeff23501@ac-xu3lsgm-shard-00-00.56t0lit.mongodb.net:27017,ac-xu3lsgm-shard-00-01.56t0lit.mongodb.net:27017,ac-xu3lsgm-shard-00-02.56t0lit.mongodb.net:27017/?ssl=true&replicaSet=atlas-qkrhl6-shard-0&authSource=admin&retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://johnwei:37271776@cluster0.b8nc4df.mongodb.net/?retryWrites=true&w=majority
 SALT_ROUNDS = 2
 SECRET = "just_a_random_secret";
  
